# fall-2024-class-02

./: .gitignore  README.md  pyproject.toml
.devcontainer/: configure_environment.sh
